<resources>
    <string name="app_name">智联之窗</string>
    <string name="app_name_debug">智联之窗DEBUG</string>
    <string name="home_page_title">智联之窗</string>
    <string name="about_app">关于智联之窗</string>
    <string name="data_browse">数据浏览</string>
    <string name="freedom_scout">自由巡检</string>
    <string name="parameter_config">参数配置</string>
    <string name="product_display">产品展示</string>
    <string name="settings">设置</string>
    <string name="function_expect">敬请期待</string>
    <string name="timestamp">时间</string>
    <string name="name">名称</string>
    <string name="device_name">设备名称</string>
    <string name="measurement_name">测量名称</string>
    <string name="measurement_type">测量类型</string>
    <string name="node_name">节点名称</string>
    <string name="sensor_id">ID</string>
    <string name="value">数值</string>
    <string name="sort">排序</string>
    <string name="filtrate">筛选</string>
    <string name="search">搜索</string>
    <string name="sensor_name">传感器名称</string>
    <string name="sensor_address">传感器地址</string>
    <string name="address">地址</string>
    <string name="data_source">数据源</string>
    <string name="real_time">实时</string>
    <string name="history">历史</string>
    <string name="enable">启用</string>
    <string name="disable">禁用</string>
    <string name="today">今日</string>
    <string name="previous_day">前一日</string>
    <string name="next_day">后一日</string>
    <string name="custom_day">自选</string>
    <string name="sensor_info_title" formatted="false">%s详细信息</string>
    <string name="sensor_info_address" formatted="false">地址：%s</string>
    <string name="sensor_info_state_on">状态：在线</string>
    <string name="sensor_info_state_off">状态：离线</string>
    <string name="sensor_info_date" formatted="false">日期：%tF</string>
    <string name="sensor_info_date_real_time" formatted="false">日期：%tF（实时）</string>
    <string name="sensor_info_id" formatted="false">ID：%s</string>
    <string name="communicator">通讯模块</string>
    <string name="udp">UDP</string>
    <string name="tcp">TCP</string>
    <string name="ble">BLE</string>
    <string name="serial_port">串口</string>
    <string name="usb">USB</string>
    <string name="data_store">数据保存</string>
    <string name="data_export">数据导出</string>
    <string name="data_warn">数据告警</string>
    <string name="data_monitor">数据监测</string>
    <string name="sensor_protocol">协议</string>
    <string name="physical_sensor_mode">传感器</string>
    <string name="logical_sensor_mode">测量量</string>
    <string name="device_node_mode">设备</string>
    <string name="switch_data_source">切换数据源</string>
    <string name="battery_voltage">电源电压</string>
    <string name="function_introduction">功能介绍</string>
    <string name="prompt_error">BUG提交</string>
    <string name="version_update">版本更新</string>
    <string name="contact_us">联系我们</string>
    <string name="official_website">http://www.wsn-cn.com</string>
    <string name="add">添加</string>
    <string name="delete">删除</string>
    <string name="data_type_value">类型码</string>
    <string name="default_name">默认名称</string>
    <string name="custom_name">自定义名称</string>
    <string name="warner_settings">告警设置</string>
    <string name="warner_type">类型</string>
    <string name="abnormal_value">异常值</string>
    <string name="high_limit">上限</string>
    <string name="low_limit">下限</string>
    <string name="initial_value">初始值</string>
    <string name="initial_distance">初始距离值</string>
    <string name="warner_type_none">无</string>
    <string name="warner_type_single_range">上下限</string>
    <string name="warner_type_switch">开关</string>
    <string name="abnormal">异常</string>
    <string name="above_high_limit">超过告警上限</string>
    <string name="below_low_limit">超过告警下限</string>
    <string name="sdcard_directory">WsnBox</string>
    <string name="configuration_directory">configurations</string>
    <string name="warn_info">告警信息</string>
    <string name="sensor_type">类型</string>
    <string name="sensor_config">传感器配置</string>
    <string name="device_config">设备配置</string>
    <string name="sensor_config_description">本项配置可以改变数据浏览和自由巡检界面中数据的展现形式，主要有以下功能：\n1. 自定义传感器名称\n2. 为传感器及其测量量设置告警参数，支持多种告警方式</string>
    <string name="config_list">配置列表</string>
    <string name="scene_list">应用场景</string>
    <string name="add_para_configs">添加配置</string>
    <string name="import_para_configs">导入配置</string>
    <string name="choose_scene_config">选择场景配置</string>
    <string name="remove_config_provider">移除配置</string>
    <string name="version_description">浙江维思 版权所有\nCopyright @ 2017–2020 Weisi.\nAll Rights Reserved.</string>
    <string name="download_apk_description">下载完成后，点击安装</string>
    <string name="check_for_new_version" formatted="false">检测到新版本%s</string>
    <string name="immediate_update">立即更新</string>
    <string name="wait_a_minute">稍后再说</string>
    <string name="check_latest_version">检查新版本</string>
    <string name="basic_info">基本信息</string>
    <string name="measurement_list">测量量列表</string>
    <string name="node_list">节点列表</string>
    <string name="input_sensor_address">请输入传感器地址（16进制，忽略大小写）</string>
    <string name="input_device_name">请输入设备名称</string>
    <string name="modify_sensor_custom_name">修改传感器自定义名称</string>
    <string name="modify_measurement_custom_name">修改测量量自定义名称</string>
    <string name="modify_device_name">修改设备名称</string>
    <string name="modify_node_name">修改节点名称</string>
    <string name="choose_warner_type">请选择告警类型</string>
    <string name="set_high_limit">请设置告警上限(须大于下限)</string>
    <string name="set_low_limit">请设置告警下限(须小于上限)</string>
    <string name="set_abnormal_value">请设置告警异常值</string>
    <string name="set_initial_value">请设置初始值</string>
    <string name="set_initial_distance">请设置初始距离值</string>
    <string name="use_measurement_default_name_while_node_name_empty">节点名称为空时，采用测量量名称</string>
    <string name="select_configured_sensors">请在已配置过的传感器中选择所需作为节点</string>
    <string name="input_sensor_address_or_measurement_id">请输入传感器地址或测量量ID</string>
    <string name="insert_node_input_description">地址格式为XXXX或XXXXXX，ID格式为XXXX-XX-D或XXXXXX-XX-D，其中X为16进制数字，D为十进制数字</string>
    <string name="input_parameter_config_name">请输入参数配置名称</string>
    <string name="intelligent_gasket_demo">智能垫片演示</string>
    <string name="filtrate_info">信息筛选</string>
    <string name="dialog_title_select_available_sensors">请在检测到的传感器中选择所需进行配置</string>
    <string name="notice_title_sensor_data_abnormal" formatted="false">%s(%s)数据异常</string>
    <string name="notice_text_info" formatted="false">当前%s: %s(%s)</string>
    <string name="preference_key_udp_enable">udp_enable</string>
    <string name="preference_key_base_station_ip">base_ip</string>
    <string name="preference_key_base_station_port">base_port</string>
    <string name="preference_key_udp_data_request_cycle">udp_data_request</string>
    <string name="preference_key_tcp_enable">tcp_enable</string>
    <string name="preference_key_remote_server_ip">server_ip</string>
    <string name="preference_key_remote_server_port">server_port</string>
    <string name="preference_key_tcp_data_request_cycle">tcp_data_request</string>
    <string name="preference_key_serial_port_enable">serial_port_enable</string>
    <string name="preference_key_serial_port_name">serial_port_name</string>
    <string name="preference_key_serial_port_baud_rate">serial_port_baud_rate</string>
    <string name="preference_key_serial_port_data_request_cycle">serial_port_data_request</string>
    <string name="preference_key_ble_enable">ble_enable</string>
    <string name="preference_key_ble_scan_cycle">ble_scan_cycle</string>
    <string name="preference_key_ble_scan_duration">ble_scan_duration</string>
    <string name="preference_key_sensor_data_gather_cycle">sensor_data_gather_cycle</string>
    <string name="preference_key_sensor_data_gather_enable">sensor_data_gather_enable</string>
    <string name="preference_title_udp_settings">UDP通信设置</string>
    <string name="preference_title_udp">UDP通信</string>
    <string name="preference_title_base_station_ip">基站IP地址</string>
    <string name="preference_title_base_station_port">基站端口号</string>
    <string name="preference_title_tcp">TCP通信</string>
    <string name="preference_title_remote_server_ip">服务器IP地址</string>
    <string name="preference_title_remote_server_port">服务器端口号</string>
    <string name="preference_title_data_request_cycle">数据申请周期（毫秒）</string>
    <string name="preference_title_ble">BLE通信</string>
    <string name="preference_title_ble_scan_cycle">设备搜索周期（秒）</string>
    <string name="preference_title_ble_scan_duration">搜索持续时间（秒）</string>
    <string name="preference_title_serial_port">串口通信</string>
    <string name="preference_title_serial_port_name">串口名称</string>
    <string name="preference_title_baud_rate">波特率</string>
    <string name="preference_title_sensor_data_gather_enable">保存实时数据</string>
    <string name="preference_title_sensor_data_gather_cycle">数据保存周期（秒）</string>
    <string name="preference_title_launch_parameter">启动参数</string>
    <string name="preference_title_auxiliary_function">附属功能</string>
    <string name="preference_key_usb_enable">usb_enable</string>
    <string name="preference_key_usb_vendor_product_id">usb_vp_id</string>
    <string name="preference_key_usb_baud_rate">usb_baud_rate</string>
    <string name="preference_key_usb_data_bits">usb_data_bits</string>
    <string name="preference_key_usb_stop_bits">usb_stop_bits</string>
    <string name="preference_key_usb_parity">usb_parity</string>
    <string name="preference_key_usb_data_request_cycle">usb_data_request</string>
    <string name="preference_title_use_parameter">使用参数</string>
    <string name="preference_key_launch_parameter">launch_para</string>
    <string name="preference_key_use_parameter">use_para</string>
    <string name="preference_key_auxiliary_function">aux_fun</string>
    <string name="preference_title_usb">USB通信</string>
    <string name="preference_title_usb_vendor_product_id">设备型号</string>
    <string name="preference_title_usb_baud_rate">波特率</string>
    <string name="preference_title_usb_data_bits">数据位</string>
    <string name="preference_title_usb_stop_bits">停止位</string>
    <string name="preference_title_usb_parity">校验位</string>
    <string name="preference_key_usb_protocol">usb_protocol</string>
    <string name="preference_title_usb_protocol">协议选择</string>
    <string name="preference_key_data_browse_config_provider_id">db_cfg_pvd_id</string>
    <string name="preference_key_output_file_path">output_path</string>
    <string name="preference_key_time_synchronize">time_sync</string>
    <string name="preference_title_time_synchronize">时间同步</string>
    <string name="preference_key_data_warn_enable">data_warn</string>
    <string name="preference_title_data_warn_enable">实时数据告警</string>
    <string name="preference_key_data_warn_notify_enable">dw_notify</string>
    <string name="preference_title_data_warn_notify_enable">发送系统通知</string>
    <string name="preference_key_data_warn_notify_sound_enable">dwn_sound</string>
    <string name="preference_title_data_warn_notify_sound_enable">提示音</string>
    <string name="preference_key_data_warn_notify_vibrate_enable">dwn_vibrate</string>
    <string name="preference_title_data_warn_notify_vibrate_enable">震动</string>
    <string name="preference_key_data_warn_notify_float_enable">dwn_float</string>
    <string name="preference_title_data_warn_notify_float_enable">浮动显示</string>
    <string name="preference_key_data_warn_notify_screen_enable">dwn_screen</string>
    <string name="preference_title_data_warn_notify_screen_enable">锁屏显示</string>
    <string name="preference_key_data_warn_toast_enable">dw_toast</string>
    <string name="preference_title_data_warn_toast_enable">弹出侧边栏</string>
    <string name="preference_key_data_monitor_background_enable">dm_back</string>
    <string name="preference_title_data_monitor_background_enable">后台监测数据</string>
    <string name="preference_summary_data_monitor_background_enable">启用后允许APP关闭后依然可以接收传感器实时数据并提供告警服务</string>
</resources>