<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:key="@string/preference_key_usb_enable"
        android:title="@string/preference_title_usb"
        android:switchTextOn="@string/enable"
        android:switchTextOff="@string/disable"/>
    <PreferenceCategory
        android:key="@string/preference_key_launch_parameter"
        android:title="@string/preference_title_launch_parameter">
        <ListPreference
            android:key="@string/preference_key_usb_vendor_product_id"
            android:title="@string/preference_title_usb_vendor_product_id"
            android:entries="@array/usb_vendor_product_id_entries"
            android:entryValues="@array/usb_vendor_product_id_values"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/preference_title_use_parameter"
        android:key="@string/preference_key_use_parameter">
        <ListPreference
            android:key="@string/preference_key_usb_protocol"
            android:title="@string/preference_title_usb_protocol"
            android:entries="@array/usb_protocols"
            android:entryValues="@array/usb_protocols"/>
        <ListPreference
            android:key="@string/preference_key_usb_baud_rate"
            android:title="@string/preference_title_baud_rate"
            android:entries="@array/baud_rates"
            android:entryValues="@array/baud_rates"/>
        <ListPreference
            android:key="@string/preference_key_usb_data_bits"
            android:title="@string/preference_title_usb_data_bits"
            android:entries="@array/data_bits"
            android:entryValues="@array/data_bits"/>
        <ListPreference
            android:key="@string/preference_key_usb_stop_bits"
            android:title="@string/preference_title_usb_stop_bits"
            android:entries="@array/stop_bits_entries"
            android:entryValues="@array/stop_bits_values"/>
        <ListPreference
            android:key="@string/preference_key_usb_parity"
            android:title="@string/preference_title_usb_parity"
            android:entries="@array/parity_entries"
            android:entryValues="@array/parity_values"/>
        <EditTextPreference
            android:key="@string/preference_key_usb_data_request_cycle"
            android:title="@string/preference_title_data_request_cycle"
            android:inputType="number"/>
    </PreferenceCategory>
</PreferenceScreen>