<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory>
        <SwitchPreferenceCompat
            android:key="@string/preference_key_udp_enable"
            android:title="@string/preference_title_udp"
            android:switchTextOn="@string/enable"
            android:switchTextOff="@string/disable"/>
        <EditTextPreference
            android:key="@string/preference_key_base_station_ip"
            android:title="@string/preference_title_base_station_ip"/>
        <EditTextPreference
            android:key="@string/preference_key_base_station_port"
            android:title="@string/preference_title_base_station_port"
            android:inputType="number"/>
        <EditTextPreference
            android:key="@string/preference_key_udp_data_request_cycle"
            android:title="@string/preference_title_data_request_cycle"
            android:inputType="number"/>
    </PreferenceCategory>
    <PreferenceCategory>
        <SwitchPreferenceCompat
            android:key="@string/preference_key_ble_enable"
            android:title="@string/preference_title_ble"
            android:switchTextOn="@string/enable"
            android:switchTextOff="@string/disable"/>
        <EditTextPreference
            android:key="@string/preference_key_ble_scan_cycle"
            android:title="@string/preference_title_ble_scan_cycle"
            android:inputType="number"/>
        <EditTextPreference
            android:key="@string/preference_key_ble_scan_duration"
            android:title="@string/preference_title_ble_scan_duration"
            android:inputType="number"/>
    </PreferenceCategory>
    <PreferenceCategory>
        <SwitchPreferenceCompat
            android:key="@string/preference_key_serial_port_enable"
            android:title="@string/preference_title_serial_port"
            android:switchTextOn="@string/enable"
            android:switchTextOff="@string/disable"/>
        <ListPreference
            android:key="@string/preference_key_serial_port_name"
            android:title="@string/preference_title_serial_port_name"/>
        <ListPreference
            android:key="@string/preference_key_serial_port_baud_rate"
            android:title="@string/preference_title_serial_port_baud_rate"
            android:entries="@array/baud_rates"
            android:entryValues="@array/baud_rates"/>
        <EditTextPreference
            android:key="@string/preference_key_serial_port_data_request_cycle"
            android:title="@string/preference_title_data_request_cycle"
            android:inputType="number"/>
    </PreferenceCategory>
    <PreferenceCategory>
        <SwitchPreferenceCompat
            android:key="@string/preference_key_sensor_data_gather_enable"
            android:title="@string/preference_title_sensor_data_gather_enable"
            android:switchTextOn="@string/enable"
            android:switchTextOff="@string/disable"/>
        <EditTextPreference
            android:key="@string/preference_key_sensor_data_gather_cycle"
            android:title="@string/preference_title_sensor_data_gather_cycle"
            android:inputType="number"/>
    </PreferenceCategory>
</PreferenceScreen>