<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:id="@+id/btn_today"
        android:text="@string/today"
        android:textSize="@dimen/size_text_dialog"
        android:background="@color/time_selection_today"/>

    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:id="@+id/btn_previous_day"
        android:text="@string/previous_day"
        android:textSize="@dimen/size_text_dialog"
        android:background="@color/time_selection_previous_day"/>

    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:id="@+id/btn_next_day"
        android:text="@string/next_day"
        android:textSize="@dimen/size_text_dialog"
        android:background="@color/time_selection_next_day"/>

    <Button
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:id="@+id/btn_custom_day"
        android:text="@string/custom_day"
        android:textSize="@dimen/size_text_dialog"
        android:background="@color/time_selection_custom"/>

</LinearLayout>