<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_lh_sensor_data"
    android:paddingTop="@dimen/padding_micro"
    android:paddingBottom="@dimen/padding_micro">

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:id="@+id/tv_measurement_name_id"
        android:text="@string/measurement_name"
        android:textSize="@dimen/size_text_activity"
        android:gravity="center"
        android:onClick="onClick"/>

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/timestamp"
        android:textSize="@dimen/size_text_activity"
        android:gravity="center"/>

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/value"
        android:textSize="@dimen/size_text_activity"
        android:gravity="center"/>

</LinearLayout>