<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.weisi.tool.wsnbox.activity.AboutActivity">

    <com.cjq.tool.qbox.ui.view.CustomDrawableSizeTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_app_name_version_code"
        android:textSize="@dimen/size_text_activity"
        android:drawableTop="@drawable/ic_logo"
        app:drawableTop_width="@dimen/size_image_huge"
        app:drawableTop_height="@dimen/size_image_huge"
        android:layout_marginTop="@dimen/margin_mid"
        android:layout_marginBottom="@dimen/margin_mid"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_version_description"
        android:text="@string/version_description"
        android:textSize="@dimen/size_text_activity"
        android:layout_marginBottom="@dimen/margin_mid"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/li_function_zone"
        android:orientation="vertical"
        android:showDividers="middle|end|beginning"
        android:divider="@drawable/shape_divider_about_activity"
        android:padding="@dimen/padding_small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name_version_code"
        app:layout_constraintBottom_toTopOf="@id/tv_version_description">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_function_introduction"
            android:text="@string/function_introduction"
            android:textSize="@dimen/size_text_title_small"
            android:padding="@dimen/padding_small"
            android:background="@drawable/selector_bg_about_function"
            android:onClick="onClick"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_prompt_error"
            android:text="@string/prompt_error"
            android:textSize="@dimen/size_text_title_small"
            android:padding="@dimen/padding_small"
            android:background="@drawable/selector_bg_about_function"
            android:onClick="onClick"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_version_update"
            android:text="@string/version_update"
            android:textSize="@dimen/size_text_title_small"
            android:padding="@dimen/padding_small"
            android:background="@drawable/selector_bg_about_function"
            android:onClick="onClick"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_contact_us"
            android:text="@string/contact_us"
            android:textSize="@dimen/size_text_title_small"
            android:padding="@dimen/padding_small"
            android:background="@drawable/selector_bg_about_function"
            android:onClick="onClick"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
